--- a/LabbWPF/LabbWPF.csproj
+++ b/LabbWPF/LabbWPF.csproj
@@ -9,6 +9,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SampleData\todo-sample-data.json" />
+    <None Remove="SampleData\user-sample-data.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SampleData\todo-sample-data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="SampleData\user-sample-data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LabbClassLibrary\LabbClassLibrary.csproj" />
   </ItemGroup>
 
